# FirstPersonShooter

./: CMakeLists.txt
assets/Models/glTF/: Knife.glb  Rifle.glb  Shotgun.glb  Sniper.glb
src/: Player.cpp  Player.h  main.cpp
